2011-05-16  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12766]
	* misc/error.c (error_at_line): Ensure file_name and old_file_name
	point to strings before performing equality test for error_one_per_line
	mode.

	[BZ #11697]
	* login/programs/pt_chown.c (do_pt_chown): Always call chown.

	[BZ #11820]
	* sysdeps/unix/sysv/linux/x86_64/sys/user.h
	(struct user_fpregs_struct): Avoid __uint*_t types.

	[BZ #6420]
	* malloc/mtrace.c (tr_where): Add additional parameter to point to
	symbol info.  Use it instead of calling _dl_addr locally.
	(lock_and_info): New function.
	(tr_freehook): Call lock_and_info and pass symbol info as additional
	parameter to tr_where.
	(tr_mallochook): Likewise.
	(tr_reallochook): Likewise.
	(tr_memalignhook): Likewise.

	* malloc/mtrace.c: Remove support for USE_MTRACE_FILE.  It is not
	used and couldn't be at all thread-safe.

2011-05-15  Ulrich Drepper  <drepper@gmail.com>

	* libio/freopen.c (freopen): Don't close old file descriptor
	before the new one is opened.  Instead dup the new file descriptor
	to the old one after the new stream is created.
	* libio/freopen64.c (freopen64): Likewise.
	* libio/libio.h: Define _IO_FLAGS2_NOCLOSE and _IO_FLAGS2_CLOEXEC.
	* libio/fileops.c (_IO_new_file_close_it): Handle new
	_IO_FLAGS2_NOCLOSE flag.
	(_IO_new_file_fopen): Set _IO_FLAGS2_CLOEXEC for "e" mode.
	If _IO_file_open didn't set FD_CLOEXEC do it after the call.
	* libio/oldfileops.c (_IO_old_file_close_it): Handle new
	_IO_FLAGS2_NOCLOSE flag.
	* include/unistd.h: Add hidden_proto for dup3.
	Define __have_dup3.
	* io/dup3.c: Define hidden symbol.
	* sysdeps/unix/sysv/linux/kernel-features.h: Define __ASSUME_DUP3.

	[BZ #7101]
	* posix/getopt.c (_getopt_internal_r): List all ambigious possibilities
	when an incomplete long option is used.
	* posix/tst-getopt_long1.c: New file.
	* posix/Makefile (tests): Add tst-getopt_long1.

	[BZ #10138]
	* scripts/config.guess: Update from autoconf-2.68.
	* scripts/config.sub: Likewise.

	[BZ #10157]